using Enemy;
using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Knife : EnemyAttack
{
    //派手に落ちる部分だけ実装が必要？
}
