using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace GameManagers
{
    public enum GameState
    {
        Title,
        Main,
        Fight,
        Result
    }
}
