@startuml Class
skinparam classAttributeIconSize 0
hide empty members

namespace Players {
    class PlayerParameters{
        + int health
        + int unionCount
        + int partialHitCount
    }

    class CharacterParameters{
        + float maxSpeed
        + float acceleration
        + float deceleration
    }

    class PlayerInputs{
        + Vector2 leftMoveStick
        + Vector2 rightMoveStick
        + bool leftAttack
        + bool rightAttack

        + bool leftAcceleration
        + bool rightAcceleration

        - void OnLeftMove(InputValue value)
        - void OnRightMove(InputValue value)
        - void OnFireLeft()
        - void OnFireRight()
    }


    class PlayerCore {
        + bool isAlive
        - PlayerInputs _inputs
        + PlayerCharacter character
        + PlayerPartial partial
        - List<PlayerPartial> _partialPrefabs
        - List<GameObject> _generatePositions
        - EnemyCore _enemy

        - PlayerParameters _defaultParameters
        - PlayerParameters _currentParameters

        + void UnitePartial()
        + void GeneratePartial()
        + void TakeDamage(int damage)
        + void TakePartialDamage(int damage)

        - void Die()
        - void Move()
        - void Attack()
    }

    PlayerCore *-- PlayerParameters
    PlayerCore *-- PlayerPartial

    PlayerCore --> PlayerInputs
    PlayerCore --> PlayerCharacter
    PlayerCore --> EnemyCore

    class PlayerCharacter {
        - CharacterParameters _defaultParameters
        - CharacterParameters _currentParameters

        + void Move(Vector3 direction)
        + void TakeDamage(int damage)
        + void UnitePartial(PlayerPartial partial)
    }

    PlayerCore <-- PlayerCharacter
    PlayerCharacter *-- CharacterParameters

    class PlayerPartial {
        - CharacterParameters _defaultParameters
        - CharacterParameters _currentParameters

        + void Move(Vector3 direction)
        + void TakeDamage(int damage)
        - OnTriggerEnter(Collider other)
    }

    PlayerCore <-- PlayerPartial
    PlayerPartial *-- CharacterParameters
}

namespace Enemy {
    class EnemyCore {
        + bool isAlive
        + int health
        - int _currentHealth
        + int attackCount
        - int _currentAttackCount
        - List<EnemyAttack> _attackPrefabs

        + void TakeDamage(int damage)
        + void Die()
        - void GenerateAttack()
    }

    class AttackParameters {
        + float moveSpeed
        + float chaseTime
        + float remainTime
    }

    class EnemyAttack {
        + bool isActive
        - AttackParameters _parameters
        - PlayerCharacter _target
        - float moveSpeed

        + void SetTarget(PlayerCharacter target)
        - void Move()
        - void Attack()
        - void OnTriggerEnter(Collider other)
    }

    EnemyCore *-- EnemyAttack

    class Knife
    class Pot
    Class Rod

    EnemyAttack <|-- Knife
    EnemyAttack <|-- Pot
    EnemyAttack <|-- Rod

    EnemyCore *-- EnemyAttack

    class Knife
    class Pot
    Class Rod

    EnemyAttack <|-- Knife
    EnemyAttack <|-- Pot
    EnemyAttack <|-- Rod
}

namespace GameManagers {
    class MainGameManager {
        + GameState state
        - GameTimeManager _timeManager
        - GameTimeManager _timeManager
    }

    enum GameState{
        + Title
        + Run
        + Fight
        + Result
    }

    class GameTimeManager

    MainGameManager --> GameTimeManager

    class GameTimeManager

    MainGameManager --> GameTimeManager
}

@enduml
